iceworm/trees/_antlr/IceSqlParser.py
# flake8: noqa
# Generated from IceSql.g4 by ANTLR 4.8
# encoding: utf-8
from omnibus._vendor.antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class IceSqlParser ( Parser ):

    grammarFileName = "IceSql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "','", "')'", "'*'", "'.'", 
                     "':'", "'['", "']'", "'::'", "'=>'", "'='", "'!='", 
                     "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
                     "'/'", "'%'", "'||'", "'all'", "'and'", "'any'", "'as'", 
                     "'asc'", "'between'", "'by'", "'case'", "'cast'", "'create'", 
                     "'cross'", "'current'", "'date'", "'delete'", "'desc'", 
                     "'distinct'", "'drop'", "'else'", "'end'", "'escape'", 
                     "'except'", "'extract'", "'false'", "'first'", "'following'", 
                     "'for'", "'from'", "'full'", "'function'", "'group'", 
                     "'grouping'", "'having'", "'ignore'", "'ilike'", "'in'", 
                     "'inner'", "'insert'", "'intersect'", "'interval'", 
                     "'into'", "'is'", "'join'", "'last'", "'lateral'", 
                     "'left'", "'like'", "'limit'", "'minus'", "'natural'", 
                     "'not'", "'null'", "'nulls'", "'on'", "'or'", "'order'", 
                     "'outer'", "'over'", "'partition'", "'pivot'", "'preceding'", 
                     "'qualify'", "'range'", "'replace'", "'respect'", "'right'", 
                     "'rlike'", "'row'", "'rows'", "'select'", "'sets'", 
                     "'table'", "'then'", "'top'", "'true'", "'unbounded'", 
                     "'union'", "'unpivot'", "'using'", "'when'", "'where'", 
                     "'with'", "'within'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ALL", "AND", "ANY", "AS", "ASC", "BETWEEN", "BY", 
                      "CASE", "CAST", "CREATE", "CROSS", "CURRENT", "DATE", 
                      "DELETE", "DESC", "DISTINCT", "DROP", "ELSE", "END", 
                      "ESCAPE", "EXCEPT", "EXTRACT", "FALSE", "FIRST", "FOLLOWING", 
                      "FOR", "FROM", "FULL", "FUNCTION", "GROUP", "GROUPING", 
                      "HAVING", "IGNORE", "ILIKE", "IN", "INNER", "INSERT", 
                      "INTERSECT", "INTERVAL", "INTO", "IS", "JOIN", "LAST", 
                      "LATERAL", "LEFT", "LIKE", "LIMIT", "MINUS", "NATURAL", 
                      "NOT", "NULL", "NULLS", "ON", "OR", "ORDER", "OUTER", 
                      "OVER", "PARTITION", "PIVOT", "PRECEDING", "QUALIFY", 
                      "RANGE", "REPLACE", "RESPECT", "RIGHT", "RLIKE", "ROW", 
                      "ROWS", "SELECT", "SETS", "TABLE", "THEN", "TOP", 
                      "TRUE", "UNBOUNDED", "UNION", "UNPIVOT", "USING", 
                      "WHEN", "WHERE", "WITH", "WITHIN", "STRING", "INTEGER_VALUE", 
                      "DECIMAL_VALUE", "FLOAT_VALUE", "IDENTIFIER", "QUOTED_IDENTIFIER", 
                      "JINJA", "COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_singleStatement = 0
    RULE_statement = 1
    RULE_createTable = 2
    RULE_colSpec = 3
    RULE_insert = 4
    RULE_delete = 5
    RULE_select = 6
    RULE_cteSelect = 7
    RULE_cte = 8
    RULE_setSelect = 9
    RULE_setSelectItem = 10
    RULE_setSelectKind = 11
    RULE_parenSelect = 12
    RULE_primarySelect = 13
    RULE_topN = 14
    RULE_selectItem = 15
    RULE_expression = 16
    RULE_booleanExpression = 17
    RULE_predicate = 18
    RULE_valueExpression = 19
    RULE_traversalKey = 20
    RULE_primaryExpression = 21
    RULE_simpleExpression = 22
    RULE_typeSpec = 23
    RULE_functionCall = 24
    RULE_kwarg = 25
    RULE_caseItem = 26
    RULE_over = 27
    RULE_frameBound = 28
    RULE_frame = 29
    RULE_sortItem = 30
    RULE_relation = 31
    RULE_grouping = 32
    RULE_groupingSet = 33
    RULE_qualifiedName = 34
    RULE_identifierList = 35
    RULE_identifier = 36
    RULE_quotedIdentifier = 37
    RULE_number = 38
    RULE_integer = 39
    RULE_string = 40
    RULE_null = 41
    RULE_true = 42
    RULE_false = 43
    RULE_setQuantifier = 44
    RULE_joinType = 45
    RULE_cmpOp = 46
    RULE_arithOp = 47
    RULE_unaryOp = 48
    RULE_unquotedIdentifier = 49

    ruleNames =  [ "singleStatement", "statement", "createTable", "colSpec", 
                   "insert", "delete", "select", "cteSelect", "cte", "setSelect", 
                   "setSelectItem", "setSelectKind", "parenSelect", "primarySelect", 
                   "topN", "selectItem", "expression", "booleanExpression", 
                   "predicate", "valueExpression", "traversalKey", "primaryExpression", 
                   "simpleExpression", "typeSpec", "functionCall", "kwarg", 
                   "caseItem", "over", "frameBound", "frame", "sortItem", 
                   "relation", "grouping", "groupingSet", "qualifiedName", 
                   "identifierList", "identifier", "quotedIdentifier", "number", 
                   "integer", "string", "null", "true", "false", "setQuantifier", 
                   "joinType", "cmpOp", "arithOp", "unaryOp", "unquotedIdentifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    ALL=24
    AND=25
    ANY=26
    AS=27
    ASC=28
    BETWEEN=29
    BY=30
    CASE=31
    CAST=32
    CREATE=33
    CROSS=34
    CURRENT=35
    DATE=36
    DELETE=37
    DESC=38
    DISTINCT=39
    DROP=40
    ELSE=41
    END=42
    ESCAPE=43
    EXCEPT=44
    EXTRACT=45
    FALSE=46
    FIRST=47
    FOLLOWING=48
    FOR=49
    FROM=50
    FULL=51
    FUNCTION=52
    GROUP=53
    GROUPING=54
    HAVING=55
    IGNORE=56
    ILIKE=57
    IN=58
    INNER=59
    INSERT=60
    INTERSECT=61
    INTERVAL=62
    INTO=63
    IS=64
    JOIN=65
    LAST=66
    LATERAL=67
    LEFT=68
    LIKE=69
    LIMIT=70
    MINUS=71
    NATURAL=72
    NOT=73
    NULL=74
    NULLS=75
    ON=76
    OR=77
    ORDER=78
    OUTER=79
    OVER=80
    PARTITION=81
    PIVOT=82
    PRECEDING=83
    QUALIFY=84
    RANGE=85
    REPLACE=86
    RESPECT=87
    RIGHT=88
    RLIKE=89
    ROW=90
    ROWS=91
    SELECT=92
    SETS=93
    TABLE=94
    THEN=95
    TOP=96
    TRUE=97
    UNBOUNDED=98
    UNION=99
    UNPIVOT=100
    USING=101
    WHEN=102
    WHERE=103
    WITH=104
    WITHIN=105
    STRING=106
    INTEGER_VALUE=107
    DECIMAL_VALUE=108
    FLOAT_VALUE=109
    IDENTIFIER=110
    QUOTED_IDENTIFIER=111
    JINJA=112
    COMMENT=113
    BLOCK_COMMENT=114
    WS=115

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SingleStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(IceSqlParser.StatementContext,0)


        def EOF(self):
            return self.getToken(IceSqlParser.EOF, 0)

        def getRuleIndex(self):
            return IceSqlParser.RULE_singleStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleStatement" ):
                listener.enterSingleStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleStatement" ):
                listener.exitSingleStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleStatement" ):
                return visitor.visitSingleStatement(self)
            else:
                return visitor.visitChildren(self)




    def singleStatement(self):

        localctx = IceSqlParser.SingleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_singleStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.statement()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IceSqlParser.T__0:
                self.state = 101
                self.match(IceSqlParser.T__0)


            self.state = 104
            self.match(IceSqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select(self):
            return self.getTypedRuleContext(IceSqlParser.SelectContext,0)


        def createTable(self):
            return self.getTypedRuleContext(IceSqlParser.CreateTableContext,0)


        def insert(self):
            return self.getTypedRuleContext(IceSqlParser.InsertContext,0)


        def delete(self):
            return self.getTypedRuleContext(IceSqlParser.DeleteContext,0)


        def getRuleIndex(self):
            return IceSqlParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = IceSqlParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IceSqlParser.T__1, IceSqlParser.SELECT, IceSqlParser.WITH]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.select()
                pass
            elif token in [IceSqlParser.CREATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.createTable()
                pass
            elif token in [IceSqlParser.INSERT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.insert()
                pass
            elif token in [IceSqlParser.DELETE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.delete()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateTableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(IceSqlParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(IceSqlParser.TABLE, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(IceSqlParser.QualifiedNameContext,0)


        def OR(self):
            return self.getToken(IceSqlParser.OR, 0)

        def REPLACE(self):
            return self.getToken(IceSqlParser.REPLACE, 0)

        def colSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IceSqlParser.ColSpecContext)
            else:
                return self.getTypedRuleContext(IceSqlParser.ColSpecContext,i)


        def AS(self):
            return self.getToken(IceSqlParser.AS, 0)

        def select(self):
            return self.getTypedRuleContext(IceSqlParser.SelectContext,0)


        def getRuleIndex(self):
            return IceSqlParser.RULE_createTable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateTable" ):
                listener.enterCreateTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateTable" ):
                listener.exitCreateTable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateTable" ):
                return visitor.visitCreateTable(self)
            else:
                return visitor.visitChildren(self)




    def createTable(self):

        localctx = IceSqlParser.CreateTableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createTable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(IceSqlParser.CREATE)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IceSqlParser.OR:
                self.state = 113
                self.match(IceSqlParser.OR)
                self.state = 114
                self.match(IceSqlParser.REPLACE)


            self.state = 117
            self.match(IceSqlParser.TABLE)
            self.state = 118
            self.qualifiedName()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IceSqlParser.T__1:
                self.state = 119
                self.match(IceSqlParser.T__1)
                self.state = 120
                self.colSpec()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==IceSqlParser.T__2:
                    self.state = 121
                    self.match(IceSqlParser.T__2)
                    self.state = 122
                    self.colSpec()
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(IceSqlParser.T__3)


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IceSqlParser.AS:
                self.state = 132
                self.match(IceSqlParser.AS)
                self.state = 133
                self.select()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(IceSqlParser.IdentifierContext,0)


        def typeSpec(self):
            return self.getTypedRuleContext(IceSqlParser.TypeSpecContext,0)


        def getRuleIndex(self):
            return IceSqlParser.RULE_colSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColSpec" ):
                listener.enterColSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColSpec" ):
                listener.exitColSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColSpec" ):
                return visitor.visitColSpec(self)
            else:
                return visitor.visitChildren(self)




    def colSpec(self):

        localctx = IceSqlParser.ColSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_colSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.identifier()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << IceSqlParser.CASE) | (1 << IceSqlParser.DATE) | (1 << IceSqlParser.EXTRACT) | (1 << IceSqlParser.FIRST) | (1 << IceSqlParser.GROUPING) | (1 << IceSqlParser.ILIKE))) != 0) or ((((_la - 66)) & ~0x3f) == 0 and ((1 << (_la - 66)) & ((1 << (IceSqlParser.LAST - 66)) | (1 << (IceSqlParser.LEFT - 66)) | (1 << (IceSqlParser.LIKE - 66)) | (1 << (IceSqlParser.OUTER - 66)) | (1 << (IceSqlParser.RANGE - 66)) | (1 << (IceSqlParser.RIGHT - 66)) | (1 << (IceSqlParser.RLIKE - 66)) | (1 << (IceSqlParser.IDENTIFIER - 66)) | (1 << (IceSqlParser.QUOTED_IDENTIFIER - 66)))) != 0):
                self.state = 137
                self.typeSpec()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(IceSqlParser.INSERT, 0)

        def INTO(self):
            return self.getToken(IceSqlParser.INTO, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(IceSqlParser.QualifiedNameContext,0)


        def select(self):
            return self.getTypedRuleContext(IceSqlParser.SelectContext,0)


        def getRuleIndex(self):
            return IceSqlParser.RULE_insert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert" ):
                listener.enterInsert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert" ):
                listener.exitInsert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert" ):
                return visitor.visitInsert(self)
            else:
                return visitor.visitChildren(self)




    def insert(self):

        localctx = IceSqlParser.InsertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_insert)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(IceSqlParser.INSERT)
            self.state = 141
            self.match(IceSqlParser.INTO)
            self.state = 142
            self.qualifiedName()
            self.state = 143
            self.select()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.where = None # BooleanExpressionContext

        def DELETE(self):
            return self.getToken(IceSqlParser.DELETE, 0)

        def FROM(self):
            return self.getToken(IceSqlParser.FROM, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(IceSqlParser.QualifiedNameContext,0)


        def WHERE(self):
            return self.getToken(IceSqlParser.WHERE, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(IceSqlParser.BooleanExpressionContext,0)


        def getRuleIndex(self):
            return IceSqlParser.RULE_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete" ):
                listener.enterDelete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete" ):
                listener.exitDelete(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete" ):
                return visitor.visitDelete(self)
            else:
                return visitor.visitChildren(self)




    def delete(self):

        localctx = IceSqlParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_delete)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(IceSqlParser.DELETE)
            self.state = 146
            self.match(IceSqlParser.FROM)
            self.state = 147
            self.qualifiedName()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IceSqlParser.WHERE:
                self.state = 148
                self.match(IceSqlParser.WHERE)
                self.state = 149
                localctx.where = self.booleanExpression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cteSelect(self):
            return self.getTypedRuleContext(IceSqlParser.CteSelectContext,0)


        def getRuleIndex(self):
            return IceSqlParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect" ):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)




    def select(self):

        localctx = IceSqlParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_select)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.cteSelect()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CteSelectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setSelect(self):
            return self.getTypedRuleContext(IceSqlParser.SetSelectContext,0)

